--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
-        <script src="script.js"></script>
 
     </head>
     <body>
         <h1>Rock, Paper, Scissors Time!</h1>
+        <div class="buttons">
+            <button id="rock">
+                Rock!
+            </button>
+            <button id="paper">
+                Paper!
+            </button>
+            <button id="scissors">
+                Scissors!
+            </button>
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
