--- a/index.html
+++ b/index.html
@@ -6,18 +6,27 @@
 
     </head>
     <body>
-        <h1>Rock, Paper, Scissors Time!</h1>
-        <div class="buttons">
-            <button id="rock">
-                Rock!
-            </button>
-            <button id="paper">
-                Paper!
-            </button>
-            <button id="scissors">
-                Scissors!
-            </button>
+        <h1>Welcome to Rock Paper Scissors! First Player to 5 points wins!</h1>
+        <div class="upper">
+            <span class="buttons">
+                <button id="rock">
+                    Rock!
+                </button>
+                <button id="paper">
+                    Paper!
+                </button>
+                <button id="scissors">
+                    Scissors!
+                </button>
+            </span>
+            <span class = "scores">
+                <span>Player's Score: </span>
+                <span id="human"></span>
+                <span>Computer's Score: </span>
+                <span id="computer"></span>
+            </span>
         </div>
+        <div class="output"></div>
         <script src="script.js"></script>
     </body>
 </html>
